--- a/package.json
+++ b/package.json
@@ -32,12 +32,15 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tailwindcss/vite": "^4.0.6",
+    "@tanstack/react-query": "^5.77.2",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.4",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.4",
     "react-icons": "^5.4.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss": "^4.0.6",
