--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
     "react-icons": "^5.4.0",
+    "react-router-dom": "^7.8.2",
     "tailwind-merge": "^3.0.1",
     "tailwindcss": "^4.0.6",
     "tailwindcss-animate": "^1.0.7"
