--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 VITE_API_URL=https://saltaget.duckdns.org/
-VITE_API_CHAT_URL=http://127.0.0.1:8000/
+VITE_API_CHAT_URL=https://django-chat-ai-xcwc.onrender.com/
